# tts_histories

./: .gitignore  LICENSE  Pipfile  README.md  cli.py  devenv.nix  devenv.yaml  flake.nix  pyproject.toml  pytest.ini  setup.py  tts_histories.py  tts_stories.py  tts_stories.session
.github/workflows/: test.yaml
app/: ao3.py  file.py  main.py  models.py  processors.py  serializers.py  telegram_handler.py  tts_stories.py  wattpad.py
app/loaders/: __init__.py  _base.py  ao3_loader.py  file_loader.py  wattpad_loader.py
app/loaders/tests/: test_loaders.py
app/loaders/tests/cassettes/: test_ao3_load.yaml  test_wattpad_chapter_load.yaml  test_wattpad_load.yaml
app/loaders/tests/snapshots/: loaders__ao3_load__0.json  loaders__wattpad_chapter_load__0.json  loaders__wattpad_load__0.json
app/tests/: conftest.py  test_main.py  test_tts_stories.py
app/tests/cassettes/: test_make_tts.yaml
app/tts_processors/: __init__.py  _base.py  coqui.py  google.py
app/tts_processors/tests/: test_tts_processors.py
app/tts_processors/tests/cassettes/: test_default_tts_google_process.yaml
app/tts_processors/tests/snapshots/: tts_processors__clean_paragraph_Ejemplo_con_espacios_es__0.json  tts_processors__clean_paragraph_Un_ejemplo_limpio_Dos_oraciones_Tres_oraciones_es__0.json  tts_processors__clean_paragraph_ejemplo1_Ejemplo_con_espacios_es__ejemplo1.json  tts_processors__clean_paragraph_ejemplo2_Ejemplo_con_espacios_Dos_oraciones_es__ejemplo2.json  tts_processors__clean_paragraph_ejemplo3_Un_ejemplo_limpio_Dos_oraciones_Tres_oraciones_es__ejemplo3.json  tts_processors__clean_paragraph_ejemplo4_Un_ejemplo_limpio_Dos_oraciones_Tres_oraciones_es__ejemplo4.json
test/: test.txt  test_main.py
tests/app/: conftest.py  test_ao3.py  test_file.py  test_loaders.py  test_main.py  test_tts_stories.py  test_wattpad.py
tests/app/cassettes/: test_ao3_save.yaml  test_extract_info.yaml  test_file_story.yaml  test_file_story_send_to_telegram.yaml  test_make_tts.yaml  test_save.yaml  test_wattpad_chapter_load.yaml  test_wattpad_load.yaml
tests/app/snapshots/: ao3_loader__ao3_load__0.json  loaders__ao3_load__0.json  loaders__wattpad_chapter_load__0.json  loaders__wattpad_load__0.json
tests/tts/: conftest.py  test_ao3.py  test_file.py  test_loaders.py  test_tts_stories.py  test_wattpad.py
tests/tts/cassettes/: test_ao3_load.yaml
tests/tts/snapshots/: file__file_story_send_to_telegram__0.json
tts/: TODO.md  ao3.py  file.py  processors.py  serializers.py  telegram_handler.py  tts_stories.py  wattpad.py
tts/loaders/: __init__.py  _base.py
