[tool.black]
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | tests/fixtures
)/
'''

[tool.pytest]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"] # Specify the directory where your tests are located
addopts = [
  "-s",
  "-v",
] # Additional options for pytest, such as -s for capturing stdout and -v for verbose output

[tool.flake8]

exclude = ["README.md"]
format = "colored"
max_line_length = 127

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
select = ["E", "F"]
ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "T",
  "W",
  "ANN",
  "ARG",
  "BLE",
  "COM",
  "DJ",
  "DTZ",
  "EM",
  "ERA",
  "EXE",
  "FBT",
  "ICN",
  "INP",
  "ISC",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "YTT",
]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.poetry]
name = "tts-stories"
version = "0.1.0"
description = ""
authors = ["npujol <naivy.luna@gmail.com>"]
readme = "README.md"
packages = [{include = "tts_stories"}]

[tool.poetry.dependencies]
python = "3.10.x"
bs4 = "*"
pydantic = "*"
nltk = "*"
pydub = "*"
peewee = "*"
telegram-upload = "*"
requests = "*"
gtts = "*"
wheel = "*"
setuptools = "*"
torch = "*"
torchvision = "*"
torchaudio = "*"
ruff = "*"
pytest-insta = "*"
pytest-vcr = "*"
urllib3 = "==1.26.15"
pytest-cov = "*"
black = "*"
flake8 = "*"
pytest = "*"
tts = "^0.13.3"
ffmpeg-python = "^0.2.0"
langdetect = "^1.0.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
