[tool.black]
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # The following are specific to Black, you probably don't want those.
  | tests/fixtures
)/
'''

[tool.pytest]
python_files = ["tests.py", "test_*.py", "*_tests.py"]
testpaths = ["tests"] # Specify the directory where your tests are located
addopts = [
  "-s",
  "-v",
] # Additional options for pytest, such as -s for capturing stdout and -v for verbose output

[tool.flake8]

exclude = ["README.md"]
format = "colored"
max_line_length = 127

[tool.ruff]
# Enable pycodestyle (`E`) and Pyflakes (`F`) codes by default.
lint.select = ["E", "F"]
lint.ignore = []

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = [
  "A",
  "B",
  "C",
  "D",
  "E",
  "F",
  "G",
  "I",
  "N",
  "Q",
  "S",
  "T",
  "W",
  "ANN",
  "ARG",
  "BLE",
  "COM",
  "DJ",
  "DTZ",
  "EM",
  "ERA",
  "EXE",
  "FBT",
  "ICN",
  "INP",
  "ISC",
  "NPY",
  "PD",
  "PGH",
  "PIE",
  "PL",
  "PT",
  "PTH",
  "PYI",
  "RET",
  "RSE",
  "RUF",
  "SIM",
  "SLF",
  "TCH",
  "TID",
  "TRY",
  "UP",
  "YTT",
]
lint.unfixable = []

# Exclude a variety of commonly ignored directories.
lint.exclude = [
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".pytype",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]

# Same as Black.
line-length = 88

# Allow unused variables when underscore-prefixed.
lint.dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.10.
target-version = "py310"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10


[project]
name = "tts-stories"
version = "0.1.0"
description = ""
requires-python = "==3.10.*"
dependencies = ["bs4", "pydantic", "nltk", "pydub", "peewee", "telegram-upload", "requests", "gtts", "wheel", "setuptools", "torch", "torchvision", "torchaudio", "ruff", "pytest-insta", "pytest-vcr", "urllib3 (==1.26.15)", "pytest-cov", "black", "flake8", "pytest", "tts (>=0.22.0,<0.23.0)", "ffmpeg-python (>=0.2.0,<0.3.0)", "langdetect (>=1.0.9,<2.0.0)", "environs (>=9.5.0,<10.0.0)"]
readme = "README.md"

[[project.authors]]
name = "npujol "
email = "naivy.luna@gmail.com"
